--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,16 @@ body {
     padding: 10px;
     color: white;
     background-color: black;
+    padding-left: 10%;
+    padding-right: 10%
   }
   
   section {
     margin: 5px;
     padding: 10px;
     background-color: lightgrey;
+    padding-left: 10%;
+    padding-right: 10%;
   }
   
   article {
@@ -23,6 +27,7 @@ body {
   
   nav ul{
     padding: 0;
+    padding-left: 10%
   }
   
   nav ul li{
