--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,18 @@ body {
     padding-left: 10%;
     padding-right: 10%;
   }
+
+
+  header{
+    display: flex;
+    justify-content: space-between;
+  }
+
+
+  
   
   section {
     margin: 5px;
-   
     background-color: lightgrey;
     padding-left: 10%;
     padding-right: 10%;
@@ -28,10 +36,15 @@ body {
     padding: 10px;
     background-color: white;
   }
+
+  nav{
+    padding-top:  10px; 
+    padding-bottom: 10px;
+  }
   
   nav ul{
     padding: 0;
-    padding-left: 10%
+    
   }
   
   nav ul li{
