--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+*{
+  box-sizing: border-box;
+}
+
 body {
     font-family: Verdana,sans-serif;
     font-size: 0.9em;
@@ -28,11 +32,28 @@ body {
     padding-right: 10%;
     padding-top:  10px;
     padding-bottom: 10px;
+   display: flex;
+   flex-wrap: wrap;
    
   }
   
   article {
     margin: 5px;
+    padding: 10px;
+    background-color: white;
+    
+  }
+
+  section>h2{
+    flex: 100%;
+  }
+
+  section>div{
+    width:33.33%;
+    padding: 5px;
+  }
+
+  article {
     padding: 10px;
     background-color: white;
   }
@@ -51,3 +72,18 @@ body {
     display: inline;
     margin: 5px;
   }
+
+
+
+
+
+
+  
+  
+  
+ 
+  article {
+    padding: 10px;
+    background-color: white;
+  
+  
